--- a/17. Math & Geometry/01. Rotate Image.html
+++ b/17. Math & Geometry/01. Rotate Image.html
@@ -11,7 +11,7 @@
             let left = 0;
             let right = matrix.length - 1;
 
-            while (l < r) {
+            while (left < right) {
                 for (let i = 0; i < right - left; i++) {
                     const top = left;
                     const bottom = right;
