--- a/17. Math & Geometry/01. Rotate Image.html
+++ b/17. Math & Geometry/01. Rotate Image.html
@@ -20,16 +20,16 @@
                     const topLeft = matrix[top][left + i];
 
                     // move bottom left into top left
-                    matrix[top][left + i] = matrix[bottom - i][l];
+                    matrix[top][left + i] = matrix[bottom - i][left];
 
                     // move bottom right into bottom left
-                    matrix[bottom - i][l] = matrix[bottom][r - i];
+                    matrix[bottom - i][left] = matrix[bottom][right - i];
 
                     // move top right into bottom right
-                    matrix[bottom][r - i] = matrix[top + i][r];
+                    matrix[bottom][right - i] = matrix[top + i][right];
 
                     // move top left into top right
-                    matrix[top + i][r] = topLeft;
+                    matrix[top + i][right] = topLeft;
                 }
                 left++;
                 right--;
