--- a/18. Bit Manipulation/03. Reverse Bits.html
+++ b/18. Bit Manipulation/03. Reverse Bits.html
@@ -23,6 +23,28 @@
         }
         n = 0b0000000000000000000000000010101;
         console.log(reverseBits(n)); // 2818572288
+
+// | i | n >>> i       | (n >>> i) & 1 | bit << (31 - i)      | res after addition                  | res (binary)                     |
+// | - | ------------- | ------------- | -------------------- | ----------------------------------- | -------------------------------- |
+// | 0 | 21 >>> 0 = 21 | 21 & 1 = 1    | 1 << 31 = 2147483648 | 0 + 2147483648 = 2147483648         | 10000000000000000000000000000000 |
+// | 1 | 21 >>> 1 = 10 | 10 & 1 = 0    | 0 << 30 = 0          | 2147483648 + 0 = 2147483648         | same as above                    |
+// | 2 | 21 >>> 2 = 5  | 5 & 1 = 1     | 1 << 29 = 536870912  | 2147483648 + 536870912 = 2684354560 | 10100000000000000000000000000000 |
+// | 3 | 21 >>> 3 = 2  | 2 & 1 = 0     | 0 << 28 = 0          | 2684354560 + 0 = 2684354560         | same as above                    |
+// | 4 | 21 >>> 4 = 1  | 1 & 1 = 1     | 1 << 27 = 134217728  | 2684354560 + 134217728 = 2818572288 | 10101000000000000000000000000000 |
+  
+
+
+// Explanation:
+
+// At i=0: bit at position 0 is 1 → put it at position 31
+
+// At i=1: bit at position 1 is 0 → put 0 at position 30
+
+// At i=2: bit at position 2 is 1 → put it at position 29
+
+// At i=3: bit at position 3 is 0 → put 0 at position 28
+
+// At i=4: bit at position 4 is 1 → put it at position 27  
     </script>
 </body>
 
