--- a/18. Bit Manipulation/04. Missing Number.html
+++ b/18. Bit Manipulation/04. Missing Number.html
@@ -27,6 +27,10 @@
 
 
         // Method: 2
+
+        function missingNumber(nums){
+            const newSet = new Set(nums);
+        }
     </script>
 </body>
 
