--- a/01. Arrays & Hashing/02. Valid Anagram.html
+++ b/01. Arrays & Hashing/02. Valid Anagram.html
@@ -9,6 +9,8 @@
 
 <body>
     <script>
+
+        // Method 2
         function isAnagram(s, t) {
 
             if (s.length !== t.length) return false;
