--- a/01. Arrays & Hashing/02. Valid Anagram.html
+++ b/01. Arrays & Hashing/02. Valid Anagram.html
@@ -9,6 +9,35 @@
 
 <body>
     <script>
+        // Method 1
+        function isAnagram(s, t) {
+            if (s.length !== t.length) {
+                return false;
+            }
+
+            const count = {};
+
+            for (let char of s) {
+                count[char] = (count[char] || 0) + 1;
+            }
+
+            for (let char of t) {
+                if (!count[char]) {
+                    return false;
+                }
+                count[char]--;
+            }
+
+            return true;
+        }
+
+
+        s = "racecar", t = "carracv"
+        console.log(isAnagram(s, t));
+
+
+
+
 
         // Method 2
         function isAnagram(s, t) {
