--- a/02. Two Pointers/01. Valid Palindrome.html
+++ b/02. Two Pointers/01. Valid Palindrome.html
@@ -13,7 +13,13 @@
             let left = 0;
             let right = s.length - 1;
 
-            const isAlphaNum = (ch) => /[a-z0-9]/i.test(ch);
+            const isAlphaNum = (c) => {
+                return (
+                    (c >= 'A' && c <= 'Z') ||
+                    (c >= 'a' && c <= 'z') ||
+                    (c >= '0' && c <= '9')
+                );
+            }
 
             while (left < right) {
                 while (left < right && !isAlphaNum(s[left])) {
