--- a/03. Sliding Window/03. Longest Repeating Character Replacement.html
+++ b/03. Sliding Window/03. Longest Repeating Character Replacement.html
@@ -14,8 +14,9 @@
             let count = new Map();
             let res = 0;
 
-            let l = 0,
-                maxf = 0;
+            let l = 0;
+            let maxf = 0;
+            
             for (let r = 0; r < s.length; r++) {
                 count.set(s[r], (count.get(s[r]) || 0) + 1);
                 maxf = Math.max(maxf, count.get(s[r]));
