--- a/11. Graphs/02. Clone Graph.html
+++ b/11. Graphs/02. Clone Graph.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Graph</title>
 </head>
+
 <body>
     <script>
-        // Method: 1
         var cloneGraph = function (node) {
             const hashMap = new Map();
 
@@ -16,6 +17,7 @@
                     return null;
                 }
 
+                //It returns the already cloned node from the hashMap. This means that the function call for that particular node ends and no further processing occurs in that particular branch of the recursion.
                 if (hashMap.has(node)) {
                     return hashMap.get(node);
                 }
@@ -24,63 +26,16 @@
                 hashMap.set(node, copy);
 
                 for (let nei of node.neighbors) {
-                    copy.neighbors.push(dfs(nei, hashMap));
+                    copy.neighbors.push(dfs(nei));
                 }
 
                 return copy;
             }
 
-            return dfs(node, hashMap);
+            return dfs(node);
         };
 
-
-
-
-
-
-
-
-
-        
-        // Metthod:2 
-        class Solution {
-
-            dfs(node, hashMap) {
-
-                // Base case: if the node is null, return null
-                if (node === null) {
-                    return null;
-                }
-
-                // If the node has already been copied (exists in hashMap), return the copy
-                if (hashMap.has(node)) {
-                    return hashMap.get(node);
-                }
-
-                // Create a new copy of the current node (without neighbors for now)
-                const copy = new Node(node.val);
-
-                // Store the copy in the hashMap to avoid infinite recursion and to reuse it
-                hashMap.set(node, copy);
-
-
-                // Recursively copy all the neighbors and add them to the copy's neighbors list
-                for (const nei of node.neighbors) {
-                    copy.neighbors.push(this.dfs(nei, hashMap));
-                }
-
-                return copy;
-            }
-
-
-            cloneGraph(node) {
-                const hashMap = new Map();
-                return this.dfs(node, hashMap);
-            }
-        }
-
         const adjList = [[2], [1, 3], [2]];
-
         let solution = new Solution();
         let result = solution.cloneGraph(adjList);
         console.log(result);
