--- a/12. Advanced Graphs/01. Alien Dictionary.html
+++ b/12. Advanced Graphs/01. Alien Dictionary.html
@@ -76,7 +76,7 @@
             }
 
         const words = ["wrt", "wrf", "er", "ett", "rftt"];
-        console.log(foreignDictionary(words)); 
+        console.log(foreignDictionary(words)); // Output: "wertf"
     </script>
 </body>
 </html>
