--- a/01. Arrays & Hashing/08. Valid Sudoku.html
+++ b/01. Arrays & Hashing/08. Valid Sudoku.html
@@ -10,36 +10,44 @@
 <body>
     <script>
         function isValidSudoku(board) {
-            const cols = new Map();
-            const rows = new Map();
-            const squares = new Map();
+            const rows = Array.from({ length: 9 }, () => new Set());
+            const cols = Array.from({ length: 9 }, () => new Set());
+            const boxes = Array.from({ length: 9 }, () => new Set());
+
 
             for (let r = 0; r < 9; r++) {
                 for (let c = 0; c < 9; c++) {
-                    if (board[r][c] === '.') continue;
+                    const val = board[r][c];
+                    if (val === '.') continue;
 
-                    const squareKey = `${Math.floor(r / 3)},${Math.floor(c / 3)}`;
+                    const boxIndex = Math.floor(r / 3) * 3 + Math.floor(c / 3);
 
-                    if (
-                        (rows.get(r) && rows.get(r).has(board[r][c])) ||
-                        (cols.get(c) && cols.get(c).has(board[r][c])) ||
-                        (squares.get(squareKey) &&
-                            squares.get(squareKey).has(board[r][c]))
-                    ) {
+                    if (rows[r].has(val) || cols[c].has(val) || boxes[boxIndex].has(val)) {
                         return false;
                     }
 
-                    if (!rows.has(r)) rows.set(r, new Set());
-                    if (!cols.has(c)) cols.set(c, new Set());
-                    if (!squares.has(squareKey)) squares.set(squareKey, new Set());
-
-                    rows.get(r).add(board[r][c]);
-                    cols.get(c).add(board[r][c]);
-                    squares.get(squareKey).add(board[r][c]);
+                    rows[r].add(val);
+                    cols[c].add(val);
+                    boxes[boxIndex].add(val);
                 }
             }
+
             return true;
         }
+
+
+        board =
+            [["1", "2", ".", ".", "3", ".", ".", ".", "."],
+            ["4", ".", ".", "5", ".", ".", ".", ".", "."],
+            [".", "9", "8", ".", ".", ".", ".", ".", "3"],
+            ["5", ".", ".", ".", "6", ".", ".", ".", "4"],
+            [".", ".", ".", "8", ".", "3", ".", ".", "5"],
+            ["7", ".", ".", ".", "2", ".", ".", ".", "6"],
+            [".", ".", ".", ".", ".", ".", "2", ".", "."],
+            [".", ".", ".", "4", "1", "9", ".", ".", "8"],
+            [".", ".", ".", ".", "8", ".", ".", "7", "9"]]
+
+        console.log(isValidSudoku(board));
     </script>
 </body>
 
