--- a/03. Sliding Window/06. Sliding Window Maximum.html
+++ b/03. Sliding Window/06. Sliding Window Maximum.html
@@ -11,7 +11,7 @@
     <script>
         //Method: 1 Optimal. It uses indexes.
         function maxSlidingWindow(nums, k) {
-            const result = [];
+            const result = [e];
             const deque = [];  // stores indices of useful elements
             let left = 0;
 
