--- a/04. Stack/02. Minimum Stack.html
+++ b/04. Stack/02. Minimum Stack.html
@@ -18,12 +18,7 @@
 
             push(val) {
                 this.stack.push(val);
-                val = Math.min(
-                    val,
-                    this.minStack.length === 0
-                        ? val
-                        : this.minStack[this.minStack.length - 1],
-                );
+                val = Math.min(val, this.minStack.length === 0 ? val : this.minStack[this.minStack.length - 1],);
                 this.minStack.push(val);
             }
 
