--- a/04. Stack/07. Largest Rectangle In Histogram.html
+++ b/04. Stack/07. Largest Rectangle In Histogram.html
@@ -7,12 +7,8 @@
 </head>
 <body>
     <script>
-        class Solution {
-    /**
-     * @param {number[]} heights
-     * @return {number}
-     */
-    largestRectangleArea(heights) {
+       
+    function largestRectangleArea(heights) {
         const n = heights.length;
         let maxArea = 0;
         const stack = [];
@@ -31,7 +27,6 @@
         }
         return maxArea;
     }
-}
     </script>
 </body>
 </html>
