--- a/04. Stack/07. Largest Rectangle In Histogram.html
+++ b/04. Stack/07. Largest Rectangle In Histogram.html
@@ -10,12 +10,13 @@
 <body>
     <script>
         function largestRectangleArea(heights) {
-            const n = heights.length;
-            let maxArea = 0;
             const stack = [];
+            let maxArea = 0;
 
-            for (let i = 0; i <= n; i++) {
-                while (stack.length && (i === n || heights[stack[stack.length - 1]] >= heights[i])) {
+            for (let i = 0; i <= heights.length; i++) {
+                const currentHeight = i === heights.length ? 0 : heights[i];
+
+                while (stack.length > 0 && currentHeight < heights[stack[stack.length - 1]]) {
                     const height = heights[stack.pop()];
                     const width = stack.length === 0 ? i : i - stack[stack.length - 1] - 1;
                     maxArea = Math.max(maxArea, height * width);
@@ -26,6 +27,9 @@
 
             return maxArea;
         }
+
+        const heights = [7, 1, 7, 2, 2, 4];
+        console.log(largestRectangleArea(heights));
     </script>
 </body>
 
