--- a/05. Binary Search/03. Koko Eating Bananas.html
+++ b/05. Binary Search/03. Koko Eating Bananas.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koko Eating Bananas</title>
 </head>
+
 <body>
     <script>
-        
+        function minEatingSpeed(piles, h) {
+            let l = 1;
+            let r = Math.max(...piles);
+
+            while (l <= r) {
+                const mid = Math.floor((l + r) / 2);
+
+                let totalTime = 0;
+
+                for (const p of piles) {
+                    totalTime += Math.ceil(p / mid);
+                }
+
+                if (totalTime <= h) {
+                    r = mid - 1;
+                } else {
+                    l = mid + 1;
+                }
+            }
+
+            return l;
+        }
+
+        piles = [1, 4, 3, 2], h = 9
+        console.log(minEatingSpeed(piles, h));
     </script>
 </body>
+
 </html>
