--- a/02. Two Pointers/05. Trapping Rain Water.html
+++ b/02. Two Pointers/05. Trapping Rain Water.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trapping Rain Water</title>
 </head>
-
 <body>
     <script>
         function trap(height) {
@@ -21,24 +19,22 @@
             let waterTrapped = 0;
 
             while (l < r) {
-                leftMax = Math.max(leftMax, height[l]);
-                rightMax = Math.max(rightMax, height[r]);
-
-                if (leftMax < rightMax) {
+                if (height[l] < height[r]) {
+                    leftMax = Math.max(leftMax, height[l]);
                     waterTrapped += leftMax - height[l];
                     l++;
                 } else {
+                    rightMax = Math.max(rightMax, height[r])
                     waterTrapped += rightMax - height[r];
                     r--;
                 }
             }
 
-            return waterTrapped;
+            return waterTrapped
         }
 
-        height = [0, 2, 0, 3, 1, 0, 1, 3, 2, 1];
+        height = [0, 2, 0, 3, 1, 0, 1, 3, 2, 1]
         console.log(trap(height));
     </script>
 </body>
-
 </html>
