--- a/04. Stack/05. Daily Temperatures.html
+++ b/04. Stack/05. Daily Temperatures.html
@@ -11,10 +11,10 @@
     <script>
         function dailyTemperatures(temperatures) {
             const res = new Array(temperatures.length).fill(0);
-            const stack = []; // pair: [temp, index]
+            const stack = []; 
 
             for (let i = 0; i < temperatures.length; i++) {
-                const t = temperatures[i];
+ 
                 while (stack.length > 0 && t > stack[stack.length - 1][0]) {
                     const [stackT, stackInd] = stack.pop();
                     res[stackInd] = i - stackInd;
