--- a/04. Stack/05. Daily Temperatures.html
+++ b/04. Stack/05. Daily Temperatures.html
@@ -15,12 +15,14 @@
 
             for (let i = 0; i < temperatures.length; i++) {
  
-                while (stack.length > 0 && t > stack[stack.length - 1][0]) {
-                    const [stackT, stackInd] = stack.pop();
-                    res[stackInd] = i - stackInd;
+                while (stack.length > 0 && temperatures[i] > temperatures[stack[stack.length - 1]]) {
+                    let prevIndex = stack.pop();
+                    res[prevIndex] = i - prevIndex;
                 }
-                stack.push([t, i]);
+
+                stack.push(i);
             }
+            
             return res;
         }
 
