--- a/04. Stack/07. Largest Rectangle In Histogram.html
+++ b/04. Stack/07. Largest Rectangle In Histogram.html
@@ -9,14 +9,13 @@
 
 <body>
     <script>
+
         function largestRectangleArea(heights) {
-            const stack = [];
             let maxArea = 0;
+            const stack = [];
 
             for (let i = 0; i <= heights.length; i++) {
-                const currentHeight = i === heights.length ? 0 : heights[i];
-
-                while (stack.length > 0 && currentHeight < heights[stack[stack.length - 1]]) {
+                while (stack.length && (i === heights.length || heights[i] <= heights[stack[stack.length - 1]])) {
                     const height = heights[stack.pop()];
                     const width = stack.length === 0 ? i : i - stack[stack.length - 1] - 1;
                     maxArea = Math.max(maxArea, height * width);
