--- a/08. Heap - Priority Queue/02. Last Stone Weight.html
+++ b/08. Heap - Priority Queue/02. Last Stone Weight.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Last Stone Weight</title>
 </head>
+
 <body>
-    
+    <script>
+        function lastStoneWeight(stones) {
+            const maxPQ = new MaxPriorityQueue();
+
+            for (const stone of stones) {
+                maxPQ.enqueue(stone);
+            }
+
+            while (maxPQ.size() > 1) {
+                const stone1 = maxPQ.dequeue();
+                const stone2 = maxPQ.dequeue();
+
+                if (stone1 !== stone2) {
+                    maxPQ.enqueue(stone1 - stone2);
+                }
+            }
+
+            return maxPQ.size() === 1 ? maxPQ.dequeue() : 0;
+        }
+    </script>
 </body>
+
 </html>
