--- a/09. Backtracking/04. Permutations.html
+++ b/09. Backtracking/04. Permutations.html
@@ -22,11 +22,13 @@
                 for (let i = 0; i < nums.length; i++) {
                     if (used[i]) continue;
 
-                    // Choose
+                    // Choose a number
                     path.push(nums[i]);
+
+                    // We mark it as used
                     used[i] = true;
 
-                    // Explore
+                    // Explore all permutations of picked number
                     backtrack(path, used);
 
                     // Un-choose (backtrack)
