--- a/09. Backtracking/07. Palindrome Partitioning.html
+++ b/09. Backtracking/07. Palindrome Partitioning.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Partitioning</title>
 </head>
+
 <body>
     <script>
-        
+        function partition(s) {
+            const result = [];
+
+            const backtrack = (start, path) => {
+                if (start === s.length) {
+                    result.push([...path]);
+                    return;
+                }
+
+                for (let end = start + 1; end <= s.length; end++) {
+                    const substring = s.slice(start, end);
+                    
+                    if (isPalindrome(substring)) {
+                        path.push(substring);         // Choose
+                        backtrack(end, path);         // Explore
+                        path.pop();                   // Un-choose (Backtrack)
+                    }
+                }
+            };
+
+
+            const isPalindrome = (str) => {
+                let left = 0;
+                let right = str.length - 1;
+
+                while (left < right) {
+                    if (str[left] !== str[right]) return false;
+                    left++;
+                    right--;
+                }
+
+                return true;
+            };
+
+
+            backtrack(0, []);
+            return result;
+        };
+
+        console.log(partition("aab"));
     </script>
 </body>
+
 </html>
