--- a/11. Graphs/13. Word Ladder.html
+++ b/11. Graphs/13. Word Ladder.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Ladder</title>
 </head>
+
 <body>
-    
+    <script>
+        function ladderLength(beginWord, endWord, wordList) {
+            const wordSet = new Set(wordList);
+            if (!wordSet.has(endWord)) return 0;
+            const queue = [beginWord];
+            let level = 1;
+
+            while (queue.length > 0) {
+                const levelSize = queue.length;
+
+                for (let i = 0; i < levelSize; i++) {
+                    const word = queue.shift();
+
+                    if (word === endWord) return level;
+
+                    for (let j = 0; j < word.length; j++) {
+                        for (let c = 97; c <= 122; c++) {
+                            const char = String.fromCharCode(c);
+                            const nextWord = word.slice(0, j) + char + word.slice(j + 1);
+
+                            if (wordSet.has(nextWord)) {
+                                wordSet.delete(nextWord);
+                                queue.push(nextWord);
+                            }
+                        }
+                    }
+                }
+                level++; // Increase level after processing all nodes at the current level
+            }
+            return 0;
+        }
+
+        const beginWord = "hit";
+        const endWord = "cog";
+        const wordList = ["hot", "dot", "dog", "lot", "log", "cog"];
+        console.log(ladderLength(beginWord, endWord, wordList)); // Output: 5
+    </script>
 </body>
+
 </html>
