--- a/12. Advanced Graphs/03. Min Cost to Connect Points.html
+++ b/12. Advanced Graphs/03. Min Cost to Connect Points.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min Cost to Connect Points</title>
 </head>
+
 <body>
     <script>
-        
+        function minCostConnectPoints(points) {
+            const N = points.length;
+            const adj = new Map();
+
+            for (let i = 0; i < N; i++) {
+                adj.set(i, []);
+            }
+
+            for (let i = 0; i < N; i++) {
+                const [x1, y1] = points[i];
+                for (let j = i + 1; j < N; j++) {
+                    const [x2, y2] = points[j];
+                    const dist = Math.abs(x1 - x2) + Math.abs(y1 - y2);
+                    adj.get(i).push([dist, j]);
+                    adj.get(j).push([dist, i]);
+                }
+            }
+
+            let res = 0;
+            const visit = new Set();
+            const minHeap = new MinPriorityQueue((entry) => entry[0]);
+            minHeap.push([0, 0]);
+
+            while (visit.size < N) {
+                const [cost, i] = minHeap.pop();
+                if (visit.has(i)) continue;
+                res += cost;
+                visit.add(i);
+                for (const [neiCost, nei] of adj.get(i)) {
+                    if (!visit.has(nei)) {
+                        minHeap.push([neiCost, nei]);
+                    }
+                }
+            }
+            return res;
+        }
     </script>
 </body>
+
 </html>
