--- a/12. Advanced Graphs/06. Cheapest Flights Within K Stops.html
+++ b/12. Advanced Graphs/06. Cheapest Flights Within K Stops.html
@@ -10,40 +10,34 @@
 <body>
     <script>
         function findCheapestPrice(n, flights, src, dst, k) {
-            // Build graph
-            const graph = new Map();
-            for (let [from, to, price] of flights) {
-                if (!graph.has(from)) graph.set(from, []);
-                graph.get(from).push([to, price]);
-            }
+            let prices = new Array(n).fill(Number.MAX_SAFE_INTEGER);
+            prices[src] = 0;
 
-            // Priority Queue: [cost, city, stops]
-            const pq = new PriorityQueue();
-            pq.enqueue([0, src, 0]);
+            for (let i = 0; i <= k; i++) {
+                const tmpPrices = [...prices];
 
-            // Track best prices to each city with given stops
-            const visited = new Map(); // key: city|stops, value: cost
+                for (const flight of flights) {
+                    const u = flight[0];
+                    const v = flight[1];
+                    const w = flight[2];
 
-            while (!pq.isEmpty()) {
-                const [cost, city, stops] = pq.dequeue();
+                    // If the source city has not been reached yet, skip it.
+                    if (prices[u] === Number.MAX_SAFE_INTEGER) continue;
 
-                if (city === dst) return cost;
-
-                if (stops > k) continue;
-
-                const neighbors = graph.get(city) || [];
-                for (let [nextCity, price] of neighbors) {
-                    const nextCost = cost + price;
-                    const key = `${nextCity}|${stops}`;
-                    if (!visited.has(key) || visited.get(key) > nextCost) {
-                        visited.set(key, nextCost);
-                        pq.enqueue([nextCost, nextCity, stops + 1]);
+                    // If we found a cheaper way to reach city v via city u, update it in tmpPrices.
+                    if (prices[u] + w < tmpPrices[v]) {
+                        tmpPrices[v] = prices[u] + w;
                     }
                 }
+
+                prices = tmpPrices;
             }
 
-            return -1;
-        };
+            return prices[dst] === Number.MAX_SAFE_INTEGER ? -1 : prices[dst];
+        }
+
+        n = 4, flights = [[0, 1, 200], [1, 2, 100], [1, 3, 300], [2, 3, 100]], src = 0, dst = 3, k = 1
+        console.log(findCheapestPrice(n, flights, src, dst, k));  // Output: 500
     </script>
 </body>
 
