--- a/15. Greedy/04. Gas Station.html
+++ b/15. Greedy/04. Gas Station.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gas Station</title>
 </head>
+
 <body>
     <script>
-        
+        function canCompleteCircuit(gas, cost) {
+            if (
+                gas.reduce((acc, val) => acc + val, 0) <
+                cost.reduce((acc, val) => acc + val, 0)
+            ) {
+                return -1;
+            }
+
+            let total = 0;
+            let start = 0;
+
+            for (let i = 0; i < gas.length; i++) {
+                total += gas[i] - cost[i];
+
+                if (total < 0) {
+                    total = 0;
+                    start = i + 1;
+                }
+            }
+
+            return start;
+        }
+
+        gas = [1, 2, 3, 4], cost = [2, 2, 4, 1];
+        console.log(canCompleteCircuit(gas, cost));
     </script>
 </body>
+
 </html>
