--- a/17. Math & Geometry/04. Happy Number OR Non-Cyclical Number.html
+++ b/17. Math & Geometry/04. Happy Number OR Non-Cyclical Number.html
@@ -36,6 +36,10 @@
             }
             return output;
         }
+
+
+        n = 100;
+        console.log(isHappy(n));
     </script>
 </body>
 
