--- a/18. Bit Manipulation/Reverse Integer.html
+++ b/18. Bit Manipulation/Reverse Integer.html
@@ -14,22 +14,26 @@
             const INT_MAX = Math.pow(2, 31) - 1;
 
             let result = 0;
-            let num = Math.abs(x);
 
-            while (num !== 0) {
-                let digit = num % 10;
-                num = Math.floor(num / 10);
+            while (x !== 0) {
+                // Extract the last digit (handle negative numbers properly)
+                let digit = x % 10;
+                // Remove the last digit from x (integer division)
+                x = (x / 10) | 0; // Bitwise OR with 0 to truncate towards zero
 
-                // Check for overflow before it happens
+                // Check for overflow/underflow before appending digit
                 if (result > Math.floor((INT_MAX - digit) / 10)) {
+                    return 0;
+                }
+                if (result < Math.ceil((INT_MIN - digit) / 10)) {
                     return 0;
                 }
 
                 result = result * 10 + digit;
             }
 
-            return x < 0 ? -result : result;
-        };
+            return result;
+        }
 
         x = 1234;
         console.log(reverse(x));
