--- a/07. Trees/01. Invert Binary Tree.html
+++ b/07. Trees/01. Invert Binary Tree.html
@@ -9,25 +9,31 @@
 
 <body>
     <script>
+        // Method 1: Depth First Search
         function invertTree(root) {
             if (!root) return null;
 
             [root.left, root.right] = [root.right, root.left];
-            this.invertTree(root.left);
-            this.invertTree(root.right);
+
+            invertTree(root.left);
+            invertTree(root.right);
 
             return root;
         }
-        
+
+
+        //Method 2: Iterative DFS
         function invertTree(root) {
             if (!root) return null;
             const stack = [root];
+
             while (stack.length) {
                 const node = stack.pop();
                 [node.left, node.right] = [node.right, node.left];
                 if (node.left) stack.push(node.left);
                 if (node.right) stack.push(node.right);
             }
+
             return root;
         }
     </script>
