--- a/07. Trees/02. Maximum Depth of Binary Tree.html
+++ b/07. Trees/02. Maximum Depth of Binary Tree.html
@@ -9,6 +9,7 @@
 
 <body>
     <script>
+        // Recursive DFS
         function maxDepth(root) {
             if (root === null) {
                 return 0;
@@ -18,6 +19,39 @@
             let rh = maxDepth(root.right);
 
             return (1 + Math.max(lh, rh));
+        }
+
+
+
+
+        // Breadth First Search
+        function maxDepth(root) {
+            const q = new Queue();
+
+            if (root !== null) {
+                q.push(root);
+            }
+
+            let level = 0;
+
+            while (q.size() > 0) {
+                const size = q.size();
+
+                for (let i = 0; i < size; i++) {
+                    const node = q.pop();
+
+                    if (node.left !== null) {
+                        q.push(node.left);
+                    }
+                    
+                    if (node.right !== null) {
+                        q.push(node.right);
+                    }
+                }
+
+                level++;
+            }
+            return level;
         }
     </script>
 </body>
