--- a/07. Trees/04. Balanced Binary Tree.html
+++ b/07. Trees/04. Balanced Binary Tree.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balanced Binary Tree</title>
 </head>
+
 <body>
     <script>
-        
+        function isBalanced(root) {
+            function checkHeight(node) {
+                if (node === null) return 0;
+
+                const leftHeight = checkHeight(node.left);
+                if (leftHeight === -1) return -1;
+
+                const rightHeight = checkHeight(node.right);
+                if (rightHeight === -1) return -1;
+
+                if (Math.abs(leftHeight - rightHeight) > 1) {
+                    return -1;
+                }
+
+                return Math.max(leftHeight, rightHeight) + 1;
+            }
+
+            return checkHeight(root) !== -1;
+        }
     </script>
 </body>
+
 </html>
