--- a/07. Trees/05. Same Binary Tree.html
+++ b/07. Trees/05. Same Binary Tree.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Same Binary Tree</title>
 </head>
+
 <body>
     <script>
-        
+        function isSameTree(p, q) {
+            if (!p && !q) {
+                return true;
+            }
+
+            if (p && q && p.val === q.val) {
+                return (isSameTree(p.left, q.left) && isSameTree(p.right, q.right));
+            } else {
+                return false;
+            }
+        }
     </script>
 </body>
+
 </html>
