--- a/07. Trees/05. Same Binary Tree.html
+++ b/07. Trees/05. Same Binary Tree.html
@@ -10,15 +10,14 @@
 <body>
     <script>
         function isSameTree(p, q) {
-            if (!p && !q) {
-                return true;
-            }
+            // Both nodes are null
+            if (!p && !q) return true;
 
-            if (p && q && p.val === q.val) {
-                return (isSameTree(p.left, q.left) && isSameTree(p.right, q.right));
-            } else {
-                return false;
-            }
+            // One is null or values don't match
+            if (!p || !q || p.val !== q.val) return false;
+
+            // Recursively check left and right subtrees
+            return (isSameTree(p.left, q.left) && isSameTree(p.right, q.right));
         }
     </script>
 </body>
