--- a/07. Trees/06. Subtree of Another Tree.html
+++ b/07. Trees/06. Subtree of Another Tree.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subtree of Another Tree</title>
 </head>
+
 <body>
     <script>
-        
+        class Solution {
+            isSubtree(root, subRoot) {
+                if (!subRoot) {
+                    return true;
+                }
+                if (!root) {
+                    return false;
+                }
+                if (this.sameTree(root, subRoot)) {
+                    return true;
+                }
+                return (this.isSubtree(root.left, subRoot) || this.isSubtree(root.right, subRoot));
+            }
+
+
+            sameTree(root, subRoot) {
+                if (!root && !subRoot) {
+                    return true;
+                }
+                if (!root || !subRoot || root.val !== subRoot.val) {
+                    return false;
+                }
+                return (this.sameTree(root.left, subRoot.left) && this.sameTree(root.right, subRoot.right));
+            }
+        }
     </script>
 </body>
+
 </html>
