--- a/07. Trees/09. Binary Tree Right Side View.html
+++ b/07. Trees/09. Binary Tree Right Side View.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binary Tree Right Side View</title>
 </head>
+
 <body>
     <script>
-        
+        function rightSideView(root) {
+            const result = [];
+            const queue = [];
+
+            if (!root) return result;
+
+            queue.push(root);
+
+            while (queue.length > 0) {
+                let rightNode = null;
+                const levelSize = queue.length;
+
+                for (let i = 0; i < levelSize; i++) {
+                    const node = queue.shift();
+
+                    if (node) {
+                        rightNode = node;
+                        if (node.left) queue.push(node.left);
+                        if (node.right) queue.push(node.right);
+                    }
+                }
+
+                if (rightNode) {
+                    result.push(rightNode.val);
+                }
+            }
+
+            return result;
+        }
     </script>
 </body>
+
 </html>
