--- a/07. Trees/11. Valid Binary Search Tree.html
+++ b/07. Trees/11. Valid Binary Search Tree.html
@@ -9,26 +9,20 @@
 
 <body>
     <script>
-        class Solution {
-            
-            isValidBST(root) {
-                return this.valid(root, -Infinity, Infinity);
+        function isValidBST(root) {
+            const dfs = (node, min, max) => {
+                if (!node) return true;
+
+                // Node value must be within (min, max)
+                if (node.val <= min || node.val >= max) return false;
+
+                // Left subtree: all values < node.val
+                // Right subtree: all values > node.val
+                return dfs(node.left, min, node.val) && dfs(node.right, node.val, max);
             }
 
-
-            valid(node, left, right) {
-                if (node === null) {
-                    return true;
-                }
-                if (!(left < node.val && node.val < right)) {
-                    return false;
-                }
-                return (
-                    this.valid(node.left, left, node.val) &&
-                    this.valid(node.right, node.val, right)
-                );
-            }
-        }
+            return dfs(root, -Infinity, Infinity);
+        };
     </script>
 </body>
 
