--- a/07. Trees/13. Construct Binary Tree from Preorder and Inorder Traversal.html
+++ b/07. Trees/13. Construct Binary Tree from Preorder and Inorder Traversal.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Construct Binary Tree from Preorder and Inorder Traversal</title>
 </head>
+
 <body>
     <script>
-        
+        class Solution {
+            buildTree(preorder, inorder) {
+                if (!preorder.length || !inorder.length) {
+                    return null;
+                }
+
+                let root = new TreeNode(preorder[0]);
+                let mid = inorder.indexOf(preorder[0]);
+
+                root.left = this.buildTree(
+                    preorder.slice(1, mid + 1),
+                    inorder.slice(0, mid),
+                );
+
+                root.right = this.buildTree(
+                    preorder.slice(mid + 1),
+                    inorder.slice(mid + 1),
+                );
+                
+                return root;
+            }
+        }
     </script>
 </body>
+
 </html>
